--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -272,6 +272,9 @@
 	<script src="assets/js/vendor-all.min.js"></script>
 	<script src="assets/plugins/bootstrap/js/bootstrap.min.js"></script>
     <script src="assets/js/pcoded.min.js"></script>
+    
+    <!-- JS personalizado -->
+    <script src="assets/js/scripts.js"></script>
 
 	<style>
 	a {
