--- a/src/main/resources/templates/servicio-listado.html
+++ b/src/main/resources/templates/servicio-listado.html
@@ -40,7 +40,6 @@
 					    				<th scope="col">Tipo de Servicio</th>
 					    				<th scope="col">Precio</th>
 					    				<th scope="col">Duración Estimada</th>
-					    				<th scope="col">Materiales Necesarios</th>
 					    				<th></th>
 					    				<th></th>
 					    			</tr>
@@ -50,12 +49,14 @@
 								        <td th:text="${s.codServicio}" class="text-center align-middle"></td>
 								        <td th:text="${s.nombre_servicio}" class="align-middle"></td>
 								        <td th:text="${s.descripcion}" class="align-middle"></td>
+								        <td th:text="${s.tipoServicio.codTipoServicio}" class="d-none"></td>
 								        <td th:text="${s.tipoServicio.descripcion_tipo}" class="align-middle"></td>
 								        <td th:text="${s.precio}" class="align-middle"></td>
 								        <td th:text="${s.duracion_estimada}" class="align-middle"></td>
-								        <td th:text="${s.materiales_necesarios}" class="align-middle"></td>
+								        <td th:text="${s.materiales_necesarios}" class="d-none"></td>
+								        <td th:text="${s.estado}" class="d-none"></td>
 								        <td class="align-middle">
-											<button class="btn btn-primary" th:onclick="'editarServicio(' + ${s.codServicio} + ')'" >Editar</button>
+											<button type="button" class="btn btn-primary btn_editar_servicio">Editar</button>
 					    				</td>
 					    				<td class="align-middle"> 
 						                    <button type="button" class="btn btn-danger deletebtn">Eliminar</button>
@@ -72,6 +73,52 @@
         </div>       
     </div>
 </div>
+
+<!-- Inicio del Modal Actualizar-->
+<div class="modal fade" id="modal_editar_servicio" tabindex="-1" aria-labelledby="editarModalLabel"
+	aria-hidden="true">
+	<div class="modal-dialog modal-lg">
+		<div class="modal-content">
+			<div class="modal-header">
+				<h5 class="modal-title">Editar Servicio</h5>
+				<button type="button" class="btn-close" data-bs-dismiss="modal" aria-label="Close"></button>
+			</div>
+			<form th:action="@{/actualizarServicio}" method="post">
+				<div class="modal-body">
+					<input type="hidden" name="codServicio" id="codigo_servicio_edit">
+					<div class="mb-3">
+						<label for="nombre_servicio_edit" class="form-label">Nombre del servicio:</label>
+						<input type="text" class="form-control" name="nombre_servicio" id="nombre_servicio_edit">
+					</div>
+					<div class="mb-3">
+						<label for="descripcion_servicio_edit" class="form-label">Descripción:</label>
+						<input type="text" class="form-control" name="descripcion" id="descripcion_servicio_edit">
+					</div>
+					<div class="mb-3">
+						<label for="tipo_servicio_edit" class="form-label">Tipo de servicio:</label>
+						<select id="tipo_servicio_edit" class="form-control" name="tipoServicio">
+						</select>			
+					</div>
+					<div class="mb-3">
+						<label for="precio_servicio_edit" class="form-label">Precio:</label>
+						<input type="text" class="form-control" name="precio" id="precio_servicio_edit">
+					</div>
+					<div class="mb-3">
+						<label for="duracion_estimada_servicio_edit" class="form-label">Duración estimada:</label>
+						<input type="text" class="form-control" name="duracion_estimada" id="duracion_estimada_servicio_edit">
+					</div>
+					<input type="hidden" name="materiales_necesarios" id="materiales_necesarios_servicio_edit">
+					<input type="hidden" name="estado" id="estado_servicio_edit">
+				</div>
+				<div class="modal-footer">
+					<button type="button" class="btn btn-secondary" data-bs-dismiss="modal">Cancelar</button>
+					<button type="submit" name="editdata" class="btn btn-primary">Sí, editar</button>
+				</div>
+			</form>
+		</div>
+	</div>
+</div>
+<!-- Fin del Modal -->
 
 
 <!-- Inicio del Modal -->
