--- a/src/main/resources/templates/cliente-listado.html
+++ b/src/main/resources/templates/cliente-listado.html
@@ -59,7 +59,7 @@
 								        <td th:text="${c.correo}" class="align-middle"></td>
 								        <td th:text="${c.estado}" class="d-none"></td>
 								        <td class="align-middle">
-											<button type="button" class="btn btn-primary btn_editar_cliente">Editar</button>
+											<button type="button" class="btn btn-warning btn_editar_cliente">Editar</button>
 					    				</td>
 					    				<td class="align-middle"> 
 						                    <button type="button" class="btn btn-danger deletebtn">Eliminar</button>
