--- a/src/main/resources/templates/cliente-nuevo.html
+++ b/src/main/resources/templates/cliente-nuevo.html
@@ -64,7 +64,7 @@
 								</div>
 							</div>
 							<button type="submit" class="btn btn-primary">Registrar</button>
-							<a href="/cliente-listado" class="btn btn-primary">Listar</a>
+							<a href="/cliente-listado" class="btn btn-warning">Listar</a>
 						</div>
 					</form>
 			    </div>
