--- a/src/main/resources/templates/layout.html
+++ b/src/main/resources/templates/layout.html
@@ -88,42 +88,42 @@
                     <li data-username="basic components Button Alert Badges breadcrumb Paggination progress Tooltip popovers Carousel Cards Collapse Tabs pills Modal Grid System Typography Extra Shadows Embeds" class="nav-item pcoded-hasmenu">
                         <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-user"></i></span><span class="pcoded-mtext">Clientes</span></a>
                         <ul class="pcoded-submenu">
-                           	<li class=""><a href="/cliente-listado" class="">Listar clientes</a></li>
+                           	<li class=""><a href="/cliente-listado" class="">Listado de clientes</a></li>
                             <li class=""><a href="/cliente-nuevo" class="">Nuevo cliente</a></li>                
                         </ul>
                     </li>
                     <li data-username="basic components Button Alert Badges breadcrumb Paggination progress Tooltip popovers Carousel Cards Collapse Tabs pills Modal Grid System Typography Extra Shadows Embeds" class="nav-item pcoded-hasmenu">
                         <a id="verProductosLink" href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="fas fa-paw"></i></span><span class="pcoded-mtext">Mascotas</span></a>
                         <ul class="pcoded-submenu">
-                            <li class=""><a href="/mascota-listado" class="">Listar mascotas</a></li>
+                            <li class=""><a href="/mascota-listado" class="">Listado de mascotas</a></li>
                             <li class=""><a href="/mascota-nueva" class="">Nueva mascota</a></li>
                         </ul>
                     </li>
                     <li data-username="basic components Button Alert Badges breadcrumb Paggination progress Tooltip popovers Carousel Cards Collapse Tabs pills Modal Grid System Typography Extra Shadows Embeds" class="nav-item pcoded-hasmenu">
                         <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="fas fa-stethoscope"></i></span><span class="pcoded-mtext">Servicios</span></a>
                         <ul class="pcoded-submenu">
-                            <li class=""><a href="/servicio-listado" class="">Listar servicios</a></li>
+                            <li class=""><a href="/servicio-listado" class="">Listado de servicios</a></li>
                             <li class=""><a href="/servicio-nuevo" class="">Nuevo servicio</a></li>
                         </ul>
                     </li>
                     <li data-username="basic components Button Alert Badges breadcrumb Paggination progress Tooltip popovers Carousel Cards Collapse Tabs pills Modal Grid System Typography Extra Shadows Embeds" class="nav-item pcoded-hasmenu">
                         <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-user"></i></span><span class="pcoded-mtext">Veterinarios</span></a>
                         <ul class="pcoded-submenu">
-                            <li class=""><a href="/veterinario-listado" class="">Listar veterinarios</a></li>
+                            <li class=""><a href="/veterinario-listado" class="">Listado de veterinarios</a></li>
                             <li class=""><a href="/veterinario-nuevo" class="">Nuevo veterinario</a></li>
                         </ul>
                     </li>            
                     <li data-username="basic components Button Alert Badges breadcrumb Paggination progress Tooltip popovers Carousel Cards Collapse Tabs pills Modal Grid System Typography Extra Shadows Embeds" class="nav-item pcoded-hasmenu">
                         <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-calendar"></i></span><span class="pcoded-mtext">Citas</span></a>
                         <ul class="pcoded-submenu">
-                            <li class=""><a href="/citas" class="">Registrar citas</a></li>
+                            <li class=""><a href="/citas" class="">Registro de citas</a></li>
                             <li class=""><a href="/vercita" class="">Historial de citas</a></li>
                         </ul>
                     </li> 
                     <li data-username="basic components Button Alert Badges breadcrumb Paggination progress Tooltip popovers Carousel Cards Collapse Tabs pills Modal Grid System Typography Extra Shadows Embeds" class="nav-item pcoded-hasmenu">
                         <a href="javascript:" class="nav-link "><span class="pcoded-micon"><i class="feather icon-calendar"></i></span><span class="pcoded-mtext">Consultas</span></a>
                         <ul class="pcoded-submenu">
-                            <li class=""><a href="/consultas" class="">Consultar Ventas</a></li>
+                            <li class=""><a href="/consultas" class="">Consulta de Ventas</a></li>
                         </ul>
                     </li>                
                 </ul>
