--- a/src/main/resources/templates/mascota-listado.html
+++ b/src/main/resources/templates/mascota-listado.html
@@ -67,7 +67,7 @@
 								        <td th:text="${m.estado}" class="d-none"></td>	
 								        <td th:text="${m.cliente.nombres + ' ' + m.cliente.apellidos}" class="align-middle"></td>
 								        <td class="align-middle">
-											<button type="button" class="btn btn-primary btn_editar_mascota">Editar</button>
+											<button type="button" class="btn btn-warning btn_editar_mascota">Editar</button>
 					    				</td>
 					    				<td class="align-middle"> 
 											<button type="button" class="btn btn-danger deletebtn">Eliminar</button>
