--- a/src/main/resources/templates/veterinario-nuevo.html
+++ b/src/main/resources/templates/veterinario-nuevo.html
@@ -60,7 +60,7 @@
 								</div>								
 							</div>
 							<button type="submit" class="btn btn-primary">Registrar</button>
-							<a href="/veterinario-listado" class="btn btn-primary">Listar</a>
+							<a href="/veterinario-listado" class="btn btn-warning">Listar</a>
 						</div>
 					</form>
 			    </div>
